<resources>
    <string name="app_name">Sweets Choice</string>
    <string name="action_settings">Settings</string>
    <string name="app_close_confirmation">Press back button once again to close the application.</string>
    <string name="no_internet">Unable to connect to server.</string>
    <string name="cart">Cart</string>
    <string name="action_logout">Log Out</string>
    <!-- Icons -->
    <string name="ic_keyboard_arrow_down">&#xe0c5;</string>
    <string name="ic_keyboard_arrow_left">&#xe0c6;</string>
    <string name="ic_keyboard_arrow_right">&#xe0c7;</string>
    <!-- Navigation Drawer -->
    <string name="drawer_icon_desc">Drawer Icon</string>
    <string name="category">Category</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <!-- General Functions-->
    <string name="file_write_failure">Opps..!! An Error Occurred at Writing State</string>
    <string name="file_read_failure">Opps..!! An Error Occurred at Reading State</string>
    <!-- Splash Screen-->
    <string name="splash_screen_dummy_text">Splash Screen</string>
    <!-- Login Screen -->
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="guest">Guest</string>
    <string name="err_username_password">Please enter correct Username/Password.</string>
    <!-- Sign Up -->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="save">Save</string>
    <string name="err_firstname">Please Enter First Name</string>
    <string name="err_lastname">Please Enter Last Name</string>
    <string name="err_email">Please Enter Valid Email</string>
    <string name="err_password">Please enter valid password with minimum 8 Characters</string>
    <!-- Product Detail Page -->
    <string name="add_to_cart">Add to Cart</string>
</resources>
